Fixed bugs
Fixed animation causing horizontal scroll on mobile

Made scrollbars invisible

Reduced the logo size in the navbar by a small amount

Sped up the navbar animation

--- a/src/input.css
+++ b/src/input.css
@@ -57,3 +57,9 @@
   font-weight: 800;
   src: local("SF UI Display Black"), url("/assets/fonts/SFUIDisplay/sf-ui-display-black-58646a6b80d5a.woff") format("woff");
 }
+
+/* invisible scrollbars */
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+}
